--- a/app/src/main/res/layout/activity_onboarding2.xml
+++ b/app/src/main/res/layout/activity_onboarding2.xml
@@ -1,10 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F9C7D9"
     tools:context=".Onboarding2Activity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+        <TextView
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Easy Shopping"
+            android:textColor="#2D2D2D"
+            android:textSize="32dp"
+            android:textStyle="bold"></TextView>
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+            android:textSize="12dp"></TextView>
+
+        <ImageView
+            android:id="@+id/lipstick"
+            android:layout_width="300dp"
+            android:layout_height="239dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/lipstick"></ImageView>
+
+        <ImageButton
+            android:layout_gravity="center"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/icon1"
+            android:layout_below="@+id/lipstick"
+            android:layout_marginTop="150dp"></ImageButton>
+    </LinearLayout>
+</LinearLayout>
