--- a/app/src/main/res/layout/activity_getstarted.xml
+++ b/app/src/main/res/layout/activity_getstarted.xml
@@ -1,10 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F9C7D9"
     tools:context=".GetstartedActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+        <TextView
+            android:id="@+id/textutama"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome"
+            android:textColor="#2D2D2D"
+            android:textSize="32dp"
+            android:textStyle="bold"></TextView>
+        <ImageView
+            android:id="@+id/gambar"
+            android:layout_marginTop="20dp"
+            android:layout_width="450dp"
+            android:layout_height="320dp"
+            android:src="@drawable/welcome"></ImageView>
+
+        <Button
+            android:id="@+id/login"
+            android:backgroundTint="#E69DB8"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="Login"></Button>
+        <Button
+            android:id="@+id/signup"
+            android:textColor="@color/black"
+            android:backgroundTint="#E69DB8"
+            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:text="Sign Up"></Button>
+    </LinearLayout>
+</LinearLayout>
