--- a/app/src/main/res/layout/activity_onboarding2.xml
+++ b/app/src/main/res/layout/activity_onboarding2.xml
@@ -39,6 +39,7 @@
             android:src="@drawable/lipstick"></ImageView>
 
         <ImageButton
+            android:id="@+id/button_onboarding2"
             android:layout_gravity="center"
             android:layout_width="80dp"
             android:layout_height="80dp"
