--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="16dp"
     tools:context=".HistoryActivity">
 
     <androidx.core.widget.NestedScrollView
@@ -58,11 +59,12 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
                         android:background="@null"
                         android:hint="Cari merek, tanggal, dll..."
-                        android:textSize="16sp"
-                        android:layout_marginStart="8dp"
-                        android:padding="8dp"/>
+                        android:minHeight="48dp"
+                        android:padding="8dp"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
