--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#F2F2F2</color>
 
     <color name="colorPrimary">#FF4081</color>
     <color name="colorPrimaryDark">#C2185B</color>
