--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -139,10 +139,12 @@
         android:id="@+id/tvRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Don't have an account? Register Now"
-        android:layout_marginTop="24dp"
-        android:textColor="#000"
         android:textSize="16sp"
+        android:textColor="#000000"
+        android:textStyle="normal"
+        android:layout_marginTop="24dp"
+        android:textAlignment="center"
+        android:layout_marginBottom="24dp"
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
