--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -166,12 +166,15 @@
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/already_have_account"
-        android:layout_marginTop="24dp"
-        android:textColor="#000"
         android:textSize="16sp"
+        android:textColor="#000000"
+        android:textStyle="normal"
+        android:layout_marginTop="24dp"
+        android:textAlignment="center"
+        android:layout_marginBottom="24dp"
         app:layout_constraintTop_toBottomOf="@id/btnSignup"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
