--- a/app/src/main/res/layout/item_checkout_product.xml
+++ b/app/src/main/res/layout/item_checkout_product.xml
@@ -36,5 +36,15 @@
             android:textSize="14sp"
             android:textColor="#000000"
             android:layout_marginTop="4dp" />
+
+        <TextView
+            android:id="@+id/textQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="x2"
+            android:textSize="13sp"
+            android:textColor="#555555"
+            android:layout_marginTop="2dp" />
+
     </LinearLayout>
 </LinearLayout>
