--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -12,8 +12,8 @@
         android:id="@+id/textRiwayatTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Riwayat Pembelian"
-        android:textSize="20sp"
+        android:text="Riwayat"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
         android:layout_margin="16dp"
