--- a/app/src/main/res/layout/activity_onboarding2.xml
+++ b/app/src/main/res/layout/activity_onboarding2.xml
@@ -27,7 +27,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+            android:text="Belanja produk kecantikan kini lebih mudah, cepat, dan menyenangkan."
             android:textSize="12dp"></TextView>
 
         <ImageView
