--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lihat semua"
-            android:textColor="#FFEAF2"
+            android:textColor="#000"
             android:textSize="13sp"
             android:visibility="gone"
             android:layout_marginTop="4dp" />
